Update logs and service